experiments/atomicity-violations/report.txt
#0
main.c:167: error: Atomicity Violation
  Atomicity Violation! - Functions 'ff' and 'f3' should be called atomically.
  165. 	pthread_mutex_unlock(&lock);
  166. 
  167. 	ff(); // (f4, ff); (ff, f3)
        ^
  168. 
  169. 	g();

#1
main.c:171: error: Atomicity Violation
  Atomicity Violation! - Functions 'ff' and 'f3' should be called atomically.
  169. 	g();
  170. 
  171. 	ff(); f2(); // (f4, f2); (ff, f3)
        ^
  172. }
  173. 

#2
main.c:13: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f4' should be called atomically.
  11. void f4(void) {}
  12. void g(void) {}
  13. void ff(void) { f3(); f1(); f4(); } // (f1, f4); (f3, f1); warning (f1, f4); warning (f3, f1)
                                  ^
  14. 
  15. 

#3
main.c:13: warning: Atomicity Violation within a Function
  Atomicity Violation within a Current Function! - Functions 'f3' and 'f1' should be called atomically.
  11. void f4(void) {}
  12. void g(void) {}
  13. void ff(void) { f3(); f1(); f4(); } // (f1, f4); (f3, f1); warning (f1, f4); warning (f3, f1)
                            ^
  14. 
  15. 

#4
main.c:68: error: Atomicity Violation
  Atomicity Violation! - Functions 'f2' and 'f4' should be called atomically.
  66. 	f4(); f2(); g(); // (f4, f2)
  67. 
  68. 	f2(); f4(); g(); // (f2, f4)
             ^
  69. 
  70. 	f4();

#5
main.c:66: error: Atomicity Violation
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  64. void test2(void)
  65. {
  66. 	f4(); f2(); g(); // (f4, f2)
             ^
  67. 
  68. 	f2(); f4(); g(); // (f2, f4)

#6
main.c:73: error: Atomicity Violation
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  71. 	pthread_mutex_lock(&lock);
  72. 	pthread_mutex_unlock(&lock);
  73. 	f2(); // (f4, f2)
       ^
  74. 	g();
  75. 

#7
main.c:153: error: Atomicity Violation
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  151. 	else if (c > 0)
  152. 	{
  153. 		f2(); // (f4, f2)
         ^
  154. 	}
  155. 	f2(); // (f4, f2)

#8
main.c:155: error: Atomicity Violation
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  153. 		f2(); // (f4, f2)
  154. 	}
  155. 	f2(); // (f4, f2)
        ^
  156. }
  157. 

#9
main.c:171: error: Atomicity Violation
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  169. 	g();
  170. 
  171. 	ff(); f2(); // (f4, f2); (ff, f3)
              ^
  172. }
  173. 

#10
main.c:58: error: Atomicity Violation
  Atomicity Violation! - Functions 'f2' and 'f3' should be called atomically.
  56. 	f1(); f1(); f2(); g(); // (f1, f2)
  57. 
  58. 	f1(); f2(); f3(); g(); // (f1, f2); (f2, f3)
                   ^
  59. 
  60. 	f1(); g(); f2(); g(); f3();

#11
main.c:108: error: Atomicity Violation
  Atomicity Violation! - Functions 'f2' and 'f3' should be called atomically.
  106. 		f2(); // (f1, f2)
  107. 	}
  108. 	f3(); // (f1, f3); (f2, f3)
        ^
  109. 
  110. 	for (; c > 0; f1()) // (f3, f1)

#12
main.c:142: error: Atomicity Violation
  Atomicity Violation! - Functions 'f2' and 'f3' should be called atomically.
  140. 		f3(); // (f1, f3)
  141. 	}
  142. 	f3(); // (f2, f3)
        ^
  143. 
  144. 	g();

#13
main.c:13: error: Atomicity Violation
  Atomicity Violation! - Functions 'f3' and 'f1' should be called atomically.
  11. void f4(void) {}
  12. void g(void) {}
  13. void ff(void) { f3(); f1(); f4(); } // (f1, f4); (f3, f1); warning (f1, f4); warning (f3, f1)
                            ^
  14. 
  15. 

#14
main.c:110: error: Atomicity Violation
  Atomicity Violation! - Functions 'f3' and 'f1' should be called atomically.
  108. 	f3(); // (f1, f3); (f2, f3)
  109. 
  110. 	for (; c > 0; f1()) // (f3, f1)
                      ^
  111. 	{
  112. 		f3(); // (f1, f3)

#15
main.c:108: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f3' should be called atomically.
  106. 		f2(); // (f1, f2)
  107. 	}
  108. 	f3(); // (f1, f3); (f2, f3)
        ^
  109. 
  110. 	for (; c > 0; f1()) // (f3, f1)

#16
main.c:112: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f3' should be called atomically.
  110. 	for (; c > 0; f1()) // (f3, f1)
  111. 	{
  112. 		f3(); // (f1, f3)
         ^
  113. 	}
  114. 

#17
main.c:140: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f3' should be called atomically.
  138. 	else
  139. 	{
  140. 		f3(); // (f1, f3)
         ^
  141. 	}
  142. 	f3(); // (f2, f3)

#18
main.c:167: error: Atomicity Violation
  Atomicity Violation! - Functions 'f4' and 'ff' should be called atomically.
  165. 	pthread_mutex_unlock(&lock);
  166. 
  167. 	ff(); // (f4, ff); (ff, f3)
        ^
  168. 
  169. 	g();

#19
main.c:52: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  50. void test1(void)
  51. {
  52. 	f1(); f2(); g(); // (f1, f2)
             ^
  53. 
  54. 	f1(); g(); f2(); g();

#20
main.c:56: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  54. 	f1(); g(); f2(); g();
  55. 
  56. 	f1(); f1(); f2(); g(); // (f1, f2)
                   ^
  57. 
  58. 	f1(); f2(); f3(); g(); // (f1, f2); (f2, f3)

#21
main.c:58: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  56. 	f1(); f1(); f2(); g(); // (f1, f2)
  57. 
  58. 	f1(); f2(); f3(); g(); // (f1, f2); (f2, f3)
             ^
  59. 
  60. 	f1(); g(); f2(); g(); f3();

#22
main.c:89: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  87. void test_only_unlock(void)
  88. {
  89. 	f1(); f2(); // (f1, f2)
             ^
  90. 	pthread_mutex_unlock(&lock);
  91. }

#23
main.c:100: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
   98. 	while (c > 0)
   99. 	{
  100. 		f1(); f2(); // (f1, f2); (f2, f1)
               ^
  101. 	}
  102. 

#24
main.c:106: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  104. 	while (c > 0)
  105. 	{
  106. 		f2(); // (f1, f2)
         ^
  107. 	}
  108. 	f3(); // (f1, f3); (f2, f3)

#25
main.c:136: error: Atomicity Violation
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  134. 	if (c > 0)
  135. 	{
  136. 		f2(); // (f1, f2)
         ^
  137. 	}
  138. 	else

#26
main.c:13: warning: Atomicity Violation within a Function
  Atomicity Violation within a Current Function! - Functions 'f1' and 'f4' should be called atomically.
  11. void f4(void) {}
  12. void g(void) {}
  13. void ff(void) { f3(); f1(); f4(); } // (f1, f4); (f3, f1); warning (f1, f4); warning (f3, f1)
                                  ^
  14. 
  15. 

#27
main.c:76: error: Atomicity Violation
  Atomicity Violation! - Functions 'f3' and 'f4' should be called atomically.
  74. 	g();
  75. 
  76. 	f3(); f4(); // (f3, f4)
             ^
  77. }
  78. 

#28
main.c:100: error: Atomicity Violation
  Atomicity Violation! - Functions 'f2' and 'f1' should be called atomically.
   98. 	while (c > 0)
   99. 	{
  100. 		f1(); f2(); // (f1, f2); (f2, f1)
         ^
  101. 	}
  102. 

#29
main.c:103: error: Atomicity Violation
  Atomicity Violation! - Functions 'f2' and 'f1' should be called atomically.
  101. 	}
  102. 
  103. 	f1(); // (f2, f1)
        ^
  104. 	while (c > 0)
  105. 	{

Found 30 issues
                                          Issue Type(ISSUED_TYPE_ID): #
                      Atomicity Violation(ATOMICITY_VIOLATION_ERROR): 28
  Atomicity Violation within a Function(ATOMICITY_VIOLATION_WARNING): 2
